src/test/deca/context/invalid/avecObjet/cast_invalid_class.deca
// Description:
//    Test de cast invalide entre classes non liées.
//
// Resultats:
//    Ligne 7 : Cast impossible de B vers A.

class A {}
class B {}

{
    A a = new A();
    B b = new B();
    a = (A)(b);
}
